--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.3.6",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "bootstrap-vue": "^2.23.1",
+    "element-plus": "^2.4.3",
     "jquery": "^3.7.1",
+    "unplugin-auto-import": "^0.17.1",
+    "unplugin-vue-components": "^0.25.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
