--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "concurrently \"npm run dev --prefix .\" \"python3 ../server/app.py\""
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "concurrently": "^9.1.2",
     "vite": "^4.1.4"
   }
 }
