--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "bootstrap-vue": "^2.23.1",
+    "echarts": "^5.6.0",
     "element-plus": "^2.4.3",
     "jquery": "^3.7.1",
     "unplugin-auto-import": "^0.17.1",
